<resources>
    <string name="app_name">androidHomework_2.1_Ushakov</string>
    <string name="Username">Имя пользователя</string>
    <string name="Subscribe">Подписаться</string>
    <string name="Clear">Очистить</string>
    <string name="Email">Электронная почта</string>
    <string name="Subscription">Подписка</string>
    <string name="successMessage">Подписка на рассылку успешно оформлена для пользователя %1$s на электронный адрес %2$s</string>
</resources>
